feat(knowledge): усилил production-надежность Knowledge Base и RAG
Реализовал комплексное production-hardening модуля Knowledge Base, ingestion, retrieval и RAG, усилил целостность данных, tenant isolation, provenance, аудит и устойчивость фоновой обработки.

Что было сделано:

- переработал архитектуру доступа к базам знаний и документам:
  - централизовал проверки прав через KnowledgeAccessService;
  - сохранил разграничение VIEWER / EDITOR / OWNER;
  - сохранил ADMIN как tenant-level управляющую роль с OWNER-equivalent доступом к контенту;
  - унифицировал resource hiding: чужая организация, недоступная MEMBERS-база и отключенная база для USER возвращали 404, а недостаток прав на видимый ресурс — 403;
  - разделил read-path и write-path документов между KnowledgeDocumentQueryRepository и KnowledgeDocumentWriteService.

- усилил работу с документами и версиями:
  - добавил tenant-scoped выборки и блокировки документов;
  - сохранил pessimistic locking при загрузке новой версии;
  - исправил определение текущего номера версии через точный org / knowledgeBase / document scope;
  - удалил неиспользуемый JPA paging-метод после перехода списка документов на отдельный query repository;
  - сохранил immutable version history и точную связь document -> current version;
  - усилил валидацию имени, размера, расширения и фактического содержимого загружаемых файлов.

- усилил KnowledgeDocumentFileValidator:
  - сохранил поддержку PDF, DOCX, TXT, HTML, MD, CSV, XLSX, PPTX, JSON и XML;
  - добавил строгую проверку UTF-8 и управляющих символов;
  - усилил PDF signature / EOF validation;
  - усилил OOXML-проверки ZIP-структуры, Content_Types и обязательных main parts;
  - блокировал path traversal и подозрительные ZIP entry names;
  - усилил XML parsing против DTD / external entities;
  - сохранил строгий ручной JSON parser;
  - проверял лимит размера как до чтения MultipartFile, так и после фактического получения byte[];
  - сохранил стабильный SHA-256 для загруженного содержимо